--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-DOCKER_REPO=ecosi
-APP_NAME=bastillion
-VERSION=3.06.03
+DOCKER_REPO=buserbrasil
+APP_NAME=bastillionec2
+VERSION=1.72.00
 
-BASTILLION_FILENAME_VERSION=3.06_03
+BASTILLION_FILENAME_VERSION=1.72_00
 DOCKERIZE_VERSION=0.6.1
